--- a/client/less/price.less
+++ b/client/less/price.less
@@ -128,7 +128,7 @@
       }
 
       .view-msg {
-        color: #f14b4b;
+        color: @default-red;
         font-size: 12px;
         display: inline-block;
         line-height: 30px;
@@ -269,7 +269,7 @@
           line-height: 45px;
 
           &:hover {
-            background: #f14b4b;
+            background: @default-red;
           }
         }
       }
