--- a/views/partials/footer.hbs
+++ b/views/partials/footer.hbs
@@ -4,7 +4,7 @@
 	<div class="home-info">
 		<div class="inner center">
 			<span class="home-info-img">
-				<img src="./images/index/foot.png" alt="" />
+				<img src="./images/common/foot.png" alt="" />
 			</span>
 		</div>
 	</div>
@@ -22,19 +22,19 @@
 				</div>
 				<div class="col-md-4 footbar-right">
 				<span class="footbar-right-icon col-md-4">
-					<img src="./images/index/update.png" alt="" />
+					<img src="./images/common/update.png" alt="" />
 					<span>
 						每天更新
 					</span>
 				</span>
 				<span class="footbar-right-icon col-md-4">
-					<img src="./images/index/protect.png" alt="" />
+					<img src="./images/common/protect.png" alt="" />
 					<span>
 						保卫苹果
 					</span>
 				</span>
 					<span class="footbar-right-icon col-md-4">
-						<img src="./images/index/strict.png" alt="" />
+						<img src="./images/common/strict.png" alt="" />
 						<span>
 							严选好货
 						</span>
