--- a/views/partials/header.hbs
+++ b/views/partials/header.hbs
@@ -1,7 +1,7 @@
 <header>
 	<div class="inner">
 		<a class="topbar-logo" href="/">
-			<img src="./images/index/logo.png" alt=""/>
+			<img src="./images/common/logo.png" alt=""/>
 		</a>
 		<div class="topbar-nav">
 			<a href="/">首页</a>
