--- a/views/partials/header.hbs
+++ b/views/partials/header.hbs
@@ -13,7 +13,7 @@
 			<a>Mac</a>
 			<a href="/price">苹果价格</a>
 			<a href="/update">苹果更新周期</a>
-			<a href="/news">苹果咨询</a>
+			<a href="/news">苹果资讯</a>
 			<a>苹果视频</a>
 		</div>
 		<div class="topbar-info">
