--- a/client/less/index.less
+++ b/client/less/index.less
@@ -726,12 +726,39 @@
 				.home-items-left {
 					display: inline-block;
 					height: 500px;
-					width: 19%;
+					width: 20%;
 					min-width: 213px;
+					background: url("../images/index/total-view.png") no-repeat;
+					background-size: 100% 100%;
+					position: relative;
+					padding: 50px 30px;
 
-					img {
-						height: 100%;
-						width: 100%;
+					.items-count {
+						padding: 2px 10px;
+						background: #fff;
+						color: @default-yellow;
+						font-size: 12px;
+						position: relative;
+						top: 60px;
+					}
+
+					p {
+						color: #fff;
+						position: relative;
+						top: 70px;
+					}
+
+					a {
+						position: relative;
+						display: inline-block;
+						background: #000;
+						color: #fff;
+						padding: 5px 20px;
+						top: 75px;
+
+						&:hover {
+							color: @default-yellow;
+						}
 					}
 				}
 
@@ -835,6 +862,53 @@
 									margin: 0 0 20px 0;
 									padding: 0;
 									font-weight: 300;
+								}
+							}
+						}
+
+						.full-li-first {
+							display: inline-block;
+							height: 240px;
+							background: url("../images/index/total-view-small.png") no-repeat;
+							background-size: 100% 100%;
+							position: relative;
+							padding: 50px 25px;
+
+							.items-count {
+								padding: 2px 4px;
+								background: #fff;
+								color: @default-yellow;
+								font-size: 12px;
+								position: relative;
+								top: 45px;
+							}
+
+							.li-p-1 {
+								color: #fff;
+								position: relative;
+								font-size: 12px;
+								margin: 0;
+								top: 40px;
+							}
+
+							.li-p-2 {
+								color: #fff;
+								position: relative;
+								font-size: 12px;
+								margin: 0;
+								top: 50px;
+							}
+
+							a {
+								position: relative;
+								display: inline-block;
+								background: #000;
+								color: #fff;
+								padding: 5px 20px;
+								top: 75px;
+
+								&:hover {
+									color: @default-yellow;
 								}
 							}
 						}
