--- a/views/newsDetails.hbs
+++ b/views/newsDetails.hbs
@@ -118,7 +118,8 @@
                     </li>
                 </ul>
                 <div class="news-content-share-block">
-                    <div class="news-content-share-top">
+									<span class="top-arrow"></span>
+                  <div class="news-content-share-top">
                         <div class="news-content-share-left col-md-8">
                             <div class="news-content-share-icon">
                                 <a>
