--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -18,12 +18,107 @@
 
 <body>
 	<div class="apple">
-		{{> header}}
+		<header>
+			<div class="inner">
+				<a class="topbar-logo" href="/">
+					<img src="./images/common/logo.png" alt=""/>
+				</a>
+				<div class="topbar-nav">
+					<a href="/">首页</a>
+					<a>iPhone7/7P</a>
+					<a>iPhone6/6sP</a>
+					<a>iPhone5/5s</a>
+					<a>iPad</a>
+					<a>iMac</a>
+					<a>Mac</a>
+					<a href="/price">苹果价格</a>
+					<a href="/update">苹果更新周期</a>
+					<a href="/news">苹果资讯</a>
+					<a>苹果视频</a>
+				</div>
+				<div class="topbar-info">
+					<a class="header-search">
+						<img src="./images/common/search-icon.png">
+					</a>
+					<a class="header-share">
+						<img src="./images/common/wechat-icon.png">
+					</a>
+					<a class="header-share">
+						<img src="./images/common/sina-icon.png">
+					</a>
+				</div>
+			</div>
+
+			<div class="side-nav">
+				<p>
+					请选择
+				</p>
+				<a class="product-line" href="#">
+					iPhone产品线
+				</a>
+				<a class="product-line" href="#">
+					iPad产品线
+				</a>
+				<a class="product-line" href="#">
+					Mac产品线
+				</a>
+				<div class="wechat">
+					<img src="./images/news/wechat.png" alt="">
+					<div>关注微信公众号</div>
+				</div>
+				<a id="back-top">
+					<img src="./images/common/backTop.png" alt="">
+				</a>
+			</div>
+		</header>
+		<div class="clearfix"></div>
 		{{{body}}}
-		{{> footer}}
+		<div class="clearfix"></div>
+		<footer>
+			<div class="home-info">
+				<div class="inner center">
+					<span class="home-info-img">
+						<img src="./images/common/foot.png" alt="" />
+					</span>
+				</div>
+			</div>
+			<div class="footer-bottom">
+				<div class="inner">
+						<div class="col-md-8 footbar-left">
+							<p class="footbar-left-line"></p>
+							<p class="footbar-left-about">
+								关于我们<span class="sep">|</span>
+								联系我们<span class="sep">|</span>意见反馈
+							</p>
+							<p class="footbar-left-copyright">
+								保卫苹果 © 1997-2016 ICP证：浙B2-20160106  浙ICP备15041168号
+							</p>
+						</div>
+						<div class="col-md-4 footbar-right">
+						<span class="footbar-right-icon col-md-4">
+							<img src="./images/common/update.png" alt="" />
+							<span>
+								每天更新
+							</span>
+						</span>
+						<span class="footbar-right-icon col-md-4">
+							<img src="./images/common/protect.png" alt="" />
+							<span>
+								保卫苹果
+							</span>
+						</span>
+							<span class="footbar-right-icon col-md-4">
+								<img src="./images/common/strict.png" alt="" />
+								<span>
+									严选好货
+								</span>
+							</span>
+						</div>
+					</div>
+			</div>
+		</footer>
 	</div>
 	<script src="/js/common/base.js"></script>
 	{{{block "scripts"}}}
 </body>
-
 </html>
