--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -2,7 +2,7 @@
 <head>
 	<title>{{title}}</title>
 	<meta http-equiv="Content-Type" content="text/html;charset=UTF-8"/>
-	<link rel="icon" href="/images//common/icon.png"/>
+	<link rel="icon" href="/images/common/icon.png"/>
 	<link rel="stylesheet/less" type="text/css" href="/less/libs/bootstrap.less"/>
 	<link rel="stylesheet/less" type="text/css" href="/less/common.less"/>
 	{{{block "stylesheets"}}}
